--- a/00_preparation.ipynb
+++ b/00_preparation.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please read the preparation document first."
+    "Please read the preparation document (intro_to_python_preparation.pdf) first."
    ]
   },
   {
@@ -287,9 +287,7 @@
    "metadata": {},
    "source": [
     "## Markdown\n",
-    "Some examples for extended markdown possibilities (double click on the cells to see the code)\n",
-    "\n",
-    "You can find more examples here: https://jupyter-notebook.readthedocs.io/en/stable/examples/Notebook/Working%20With%20Markdown%20Cells.html"
+    "Some examples for extended markdown possibilities (double click on the cells to see the code)"
    ]
   },
   {
@@ -299,6 +297,13 @@
     "| This | is   |\n",
     "|------|------|\n",
     "|   a  | table|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can find more examples here: https://jupyter-notebook.readthedocs.io/en/stable/examples/Notebook/Working%20With%20Markdown%20Cells.html"
    ]
   },
   {
@@ -328,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   },
   "nav_menu": {},
   "nteract": {
